The main algorithm has been changed to a recursive one to get an answer with big data, tests have been supplemented