@@ -1,12 +1,11 @@
 package ru.spbu.apcyb.svp.tasks.task1.test;
 
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
-import ru.spbu.apcyb.svp.tasks.task1.Combination;
-import ru.spbu.apcyb.svp.tasks.task1.Combinations;
 import ru.spbu.apcyb.svp.tasks.task1.SumExchange;
 
 /**
@@ -19,45 +18,43 @@ import ru.spbu.apcyb.svp.tasks.task1.SumExchange;
 class SumExchangeTest {
 
   @Test
-  void allCombinationsOfExchangesNormal1() {
-    Combination combination = new Combination();
-    combination.add(2);
-    combination.add(3);
-    Combinations expectedCombinations = new Combinations();
-    expectedCombinations.add(combination);
+  void allCombinationsOfExchangesTest_5_2_3() {
+    long[] expectedArray = new long[]{1, 1};
 
-    List<Integer> denomination = Arrays.asList(2, 3);
+    List<Long> denomination = Arrays.asList(2L, 3L);
     SumExchange actualSumExchange = new SumExchange(5, denomination);
-    Combinations actualCombinations = actualSumExchange.allCombinationsOfExchanges();
-
-    assertEquals(expectedCombinations.toString(), actualCombinations.toString());
+    List<long[]> list = actualSumExchange.getAllCombinationsWithList();
+    System.out.println(Arrays.toString(list.get(0)));
+    assertArrayEquals(expectedArray, list.get(0));
   }
 
   @Test
-  void allCombinationsOfExchangesNormal2() {
-    List<Integer> denomination = Arrays.asList(1, 2);
+  void allCombinationsOfExchangesTest_4_1_2() {
+    List<Long> denomination = Arrays.asList(1L, 2L);
     SumExchange actualSumExchange = new SumExchange(4, denomination);
-    Combinations actualCombinations = actualSumExchange.allCombinationsOfExchanges();
-
-    assertEquals("[1 1 1 1 , 1 1 2 , 2 2 ]", actualCombinations.toString());
+    List<long[]> list = actualSumExchange.getAllCombinationsWithList();
+    StringBuilder actualString = new StringBuilder();
+    list.forEach(el -> actualString.append(Arrays.toString(el)));
+    assertEquals("[0, 2]" + "[2, 1]" + "[4, 0]", actualString.toString());
   }
 
   @Test
-  void allCombinationsOfExchangesTestSize() {
-    List<Integer> denomination = Arrays.asList(1, 2, 3);
-    SumExchange actualSumExchange = new SumExchange(10, denomination);
-    int actualSize = actualSumExchange.allCombinationsOfExchanges().getListOfCombinations().size();
-
-    assertEquals(14, actualSize);
+  void allCombinationsOfExchangesTest_1000_1() {
+    List<Long> denomination = List.of(1L);
+    SumExchange actualSumExchange = new SumExchange(1000, denomination);
+    List<long[]> actualList = actualSumExchange.getAllCombinationsWithList();
+    int actualCountOfCombinations = actualList.size();
+    assertEquals(1, actualCountOfCombinations);
   }
 
   @Test
-  void allCombinationsOfExchangesTestEmpty() {
-    List<Integer> denomination = Arrays.asList(5, 6);
+  void allCombinationsOfExchangesTestEmpty_8_5_6() {
+    List<Long> denomination = Arrays.asList(5L, 6L);
     SumExchange actualSumExchange = new SumExchange(8, denomination);
-    Combinations actualCombinations = actualSumExchange.allCombinationsOfExchanges();
-
-    assertEquals("[]", actualCombinations.toString());
+    List<long[]> list = actualSumExchange.getAllCombinationsWithList();
+    StringBuilder actualString = new StringBuilder();
+    list.forEach(el -> actualString.append(Arrays.toString(el)));
+    assertEquals("", actualString.toString());
   }
 
 }
